--- a/AdvantageGWT/war/AdvantageGWT.html
+++ b/AdvantageGWT/war/AdvantageGWT.html
@@ -16,7 +16,7 @@
 <!--                                           -->
 <!-- Any title is fine                         -->
 <!--                                           -->
-<title>Web Application Starter Project</title>
+<title>Advantage - Personal tennis live score and statistics</title>
 
 <!--                                           -->
 <!-- This script loads your compiled module.   -->
